--- a/homework_03/index.html
+++ b/homework_03/index.html
@@ -124,6 +124,28 @@
       Центральна міська дитяча бібліотека, Обласна бібліотека для дітей, Обласна бібліотека для юнацтва та інші.</p>
     <div>
        <!--TODO write form fields-->
+      <h2>Залишити відгук</h2>
+      <form>
+        <div class="fname">
+          <label for="fname">Імя</label><br>
+          <input type="text" id="fname" name="fname" placeholder="Ведіть імя">
+        </div>
+        <div class="lname">
+          <label for="lname">Прізвище</label><br>
+          <input type="text" id="lname" name="lname" placeholder="Ведіть прізвище">
+        </div><br>
+        <div>
+          <label for="email">Імейл</label>
+          <input type="email" id="email" name="email" placeholder="Ведіть імейл">
+          <label for="rating">Оцініть</label>
+          <input type="number" id="rating" name="rating">
+          <label for="respond">Напишіть відгук</label>
+          <textarea id="respond" name="respond" rows="9" cols="1" placeholder="залишити відгук"></textarea>
+          <input type="submit" value="Надіслати">
+        </div>
+      </form>
+
+
     </div>
   </div>
 </body>
