--- a/homework_05/index.html
+++ b/homework_05/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <header>
-  	<img src="img/logo.png" class="logo">
+  	<img src="img/logo.png" alt="Logotip">
 	<nav>
 	  <ul>
 	    <li><a href="#">Solutions</a></li>
@@ -18,33 +18,73 @@
 	    <li><a href="#">Contact</a></li>
 	  </ul>
 	</nav>
-
   </header>
+
+  <section class="ban">
+      <div class="banTxt">
+        <h2 class="banHeader">Epam helps moneysupermarket deliver engaging digital experiences</h2>
+      </div>
+  </section>
   
-  <main >
-  	
+  <main>
+  	<article>
+  	  <a href="#">
+  	    <img src="img/news/01.jpg" alt="Global Services">
+        <h3>EPAM Acquires Alliance Global Services</h3>
+        <p>Increases Global Product Development Capabilities</p>
+      </a>
+  	</article>
+
+  	<article>
+  	  <a href="#">
+  	    <img src="img/news/02.jpg" alt="Earnings Results">
+        <h3>Q2 2015 Earnings Results Date Announced</h3>
+        <p>Results will be released on August 5, 2015</p>
+      </a>
+  	</article>
+
+  	<article>
+  	  <a href="#">
+  	    <img src="img/news/03.jpg" alt="NavigationArts">
+        <h3>EPAM Acquires NavigationArts</h3>
+        <p>Expands Digital Engagement Practice</p>
+      </a>
+  	</article>
+
+  	<article>
+  	  <a href="#">
+  	    <img src="img/news/04.jpg" alt="Top 25 IT-companies">
+        <h3>Top 25 IT-companies in Ukraine, July 2015</h3>
+        <p>Growth recovery and a new leader</p>
+      </a>
+  	</article>
+
+  	<article>
+  	  <a href="#">
+  	    <img src="img/news/05.jpg" alt="Business Forum">
+        <h3>German-Ukrainian Business Forum</h3>
+        <p>Learn why Ukraine is a perfect sourcing location for IT services</p>
+      </a>
+  	</article>
+
+  	<article>
+  	  <a href="#">
+  	    <img src="img/news/06.jpg" alt="User Friendly">
+        <h3>User Friendly 2015</h3>
+        <p>Stop by our Booth #2 to learn more about recent initiatives launched across the UX domain</p>
+      </a>
+  	</article>
   </main>
 
-  <article>
-  	
-  	
-  </article>
-
   <footer>
-    
-
     <nav>
-  	  <p>&copy; 2015 EPAM Systems. All Rights Reserved.</p>
-	  <ul>
-	    <li><a href="#">Investor</a></li>
-        <li><a href="#">Relations</a></li>
+	    <ul>
+        <li><a href="#">Investor Relations</a></li>
         <li><a href="#">Contact</a></li>
         <li><a href="#">Privacy Policy</a></li>
-	  </ul>
+	    </ul>
+	    <p>&copy; 2015 EPAM Systems. All Rights Reserved.</p>
     </nav>
   </footer>
-
-
 </body>
-
 </html>
