--- a/homework_04/index.html
+++ b/homework_04/index.html
@@ -20,7 +20,7 @@
 	</nav>
 
 	<section>
-      <div class="tm">
+      <div class="tradeMark">
         <h2 class="thHeading">black <span class="and">&amp;</span> white</h2>
       </div>
       <p>An Original Brand Since 1965</p>
@@ -71,7 +71,7 @@
   	<div class="subscribe">
           <p>Subscribe to our <b>newsletter</b></p>
           <form class="email">
-            <input type="email" name="email" value="Enter you e-mail address">
+            <input type="email" name="email" placeholder="E-mail address">
             <a href="#">Subscribe</a>
           </form>
     </div>   
@@ -79,7 +79,7 @@
 
   <footer>
     <div class="grid-container">
-	  <div class="bAw">
+	  <div class="baner">
 	    <h3>Black &amp; White</h3>
 	    <p>consequuntur magni dolores atione voluptaten sequi nesc ue porro quisquam est, qui d sum qila dolor sit amet, con sum sum quia</p>
 	  </div>
